[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enviroment/Portal.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/Sounds/snd_portal.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Images/portal.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/temp.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 22 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.183908 )
colors = PoolColorArray( 0, 0, 0, 0.823529, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 100.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -200.0
scale = 2.0
color = Color( 0, 0.117647, 1, 1 )
color_ramp = SubResource( 6 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Portal:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, -81 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Portal:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Portal:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.941176 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "enter"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.941176 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.941176 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Portal:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1, 1.3 ),
"transitions": PoolRealArray( 1, 0.75, 1, 0.75 ),
"update": 0,
"values": [ Vector2( 0, -81 ), Vector2( 0, -81 ), Vector2( 0, -81 ), Vector2( 0, -81 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Portal:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1, 1.3 ),
"transitions": PoolRealArray( 1, 0.75, 1, 0.75 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 0.9 ), Vector2( 1, 1 ), Vector2( 1.1, 0.9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Portal:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 1, 1.2, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -5.0, 5.0, 0.0, 5.0, -5.0 ]
}

[node name="Portal" type="Area2D"]
modulate = Color( 1, 1, 1, 0.941176 )
z_index = 1
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -25.0
margin_top = -10.0
margin_right = 25.0
margin_bottom = 10.0
color = Color( 0, 0, 0, 0.470588 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Portal" type="Sprite" parent="."]
position = Vector2( 2, -81 )
texture = ExtResource( 3 )

[node name="PlayerPointer" type="Node2D" parent="."]
visible = false

[node name="DestinationPoint" type="Position2D" parent="PlayerPointer"]
position = Vector2( 80, 0 )

[node name="Temp" type="Sprite" parent="PlayerPointer/DestinationPoint"]
visible = false
scale = Vector2( 0.0457289, 0.0448274 )
texture = ExtResource( 4 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, -73 )
amount = 20
process_material = SubResource( 4 )

[node name="WarpNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/enter = SubResource( 7 )
anims/idle = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Portal_body_entered"]
